# Mentor

./: README.md  pyproject.toml
src/: database.py  exporting.py  main.py  searching.py  testdata.py
src/searchEngine/: __init__.py  searchVespa.py
