[project]
name = "mentor"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "re993", email = "" },
    { name = "deepseek-v4-pro" },
]
dependencies = [
    "flet>=0.85.1",
    "grafeo>=0.5.42",
    "pyvespa>=1.0.0",
]
    
[dependency-groups]
dev = [
    "flet-cli>=0.85.1",
    "flet-desktop>=0.85.1",
    "flet-web>=0.85.1",
]

[tool.flet]
org = "com.mycompany"
product = "mentor"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
